# identity-access-audit

./: LICENSE  README.md  pyproject.toml
src/identity_access_audit/: cli.py  detect.py  mapping.py  models.py  reporting.py  rules.py
